# promptaudit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: demo.tape
docs/: demo.tape
src/promptaudit/: __init__.py  cli.py  fetcher.py  report.py  resolver.py  rules.py  scanner.py
src/promptaudit/corpus/: seed_payloads.yaml
tests/: test_scanner.py
tests/fixtures/: jqwik_payload.txt
