[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "promptaudit"
version = "0.2.0"
description = "Dep-tree scanner that catches prompt-injection payloads aimed at your Coding Agent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "supermario_leo", email = "leo.stack@outlook.com" },
]
keywords = [
    "security",
    "supply-chain",
    "prompt-injection",
    "coding-agent",
    "mcp",
    "dependency-scanner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "PyYAML>=6.0,<7",
    "requests>=2.32,<3",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/supermario-leo/promptaudit"
Repository = "https://github.com/supermario-leo/promptaudit"
Issues = "https://github.com/supermario-leo/promptaudit/issues"

[project.scripts]
promptaudit = "promptaudit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptaudit"]

[tool.hatch.build.targets.wheel.force-include]
"src/promptaudit/corpus/seed_payloads.yaml" = "promptaudit/corpus/seed_payloads.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "src/promptaudit",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
